--- a/src/app/components/scrollbar/scrollbar.component.html
+++ b/src/app/components/scrollbar/scrollbar.component.html
@@ -1,298 +1,19 @@
 <div class="horizontal-container">
   <!-- Left Arrow for Scrolling -->
-  <div class="arrow">
-    <img src="../../assets/assets_scrollbar/left.svg" alt="icon_scroll" />
+  <div class="arrow left-arrow" (click)="scrollLeft()">
+    <img src="../../assets/assets_scrollbar/left.svg" alt="icon_scroll" class="arrow-image" />
   </div>
-  <div class="scrollbar">
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File1.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File2.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File3.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File4.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File5.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File6.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File7.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File8.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File9.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File10.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File11.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File12.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File13.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File14.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File15.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File16.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File1.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File2.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File3.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File4.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File5.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File6.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File7.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File8.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File9.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File10.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File11.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File12.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File13.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File14.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File15.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
-
-    <div class="image-with-text">
-      <img
-        src="../../assets/assets_scrollbar/File16.jpg"
-        alt="icon_scroll"
-        class="icon_scroll"
-      />
-      <p>Texte</p>
-    </div>
+  <div #scrollContainer class="scrollbar">
+    <!-- Utilisez *ngFor pour générer les éléments en boucle -->
+    <ng-container *ngFor="let image of imageList; let i = index">
+      <div class="image-with-text">
+        <img [src]="image.src" alt="icon_scroll" class="icon_scroll" />
+        <p>Texte {{ i + 1 }}</p> <!-- Numérote les textes à partir de 1 -->
+      </div>
+    </ng-container>
   </div>
   <!-- R Arrow for Scrolling -->
-  <div class="arrow" >
-    <img src="../../assets/assets_scrollbar/right.svg" alt="icon_scroll" />
+  <div class="arrow right-arrow" (click)="scrollRight()">
+    <img src="../../assets/assets_scrollbar/right.svg" alt="icon_scroll" class="arrow-image" />
   </div>
 </div>
