--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -29,8 +29,10 @@
   height: 8vh;
 
   .logo {
+    margin-left: 3%;
     padding-left: 1rem;
-    width: 33%;
+    width: 6%;
+    margin-right: 27%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -47,9 +49,10 @@
     justify-content: space-evenly;
     align-items: center;
     gap: 2rem;
-    width: 45%;
+    width: 30%;
   }
   .right-container {
+    margin-right: 3%;
     .text-right-container {
       white-space: nowrap;
     }
@@ -89,4 +92,12 @@
       }
     }
   }
+}
+
+
+#search-input::placeholder {
+  color: black; /* Couleur du texte en noir */
+  opacity: 1;   /* Opacité à 1 pour aucune transparence */
+  font-family: 'cereal_airbnb_light';
+  font-size: 150%;
 }
