--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -7,9 +7,14 @@ body {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap:3rem;
 }
 
+
+.cardwrapper{
+  width: 300px; /* Largeur fixe pour chaque carte */
+  justify-content: center;
+  display: flex;
+}
 
 .load{
   display: flex; 
