--- a/src/app/components/scrollbar/scrollbar.component.scss
+++ b/src/app/components/scrollbar/scrollbar.component.scss
@@ -1,47 +1,70 @@
-.scrollbar{
-    margin-top: 1vh;
-    margin-bottom: 1vh;
-    margin-left: 1vh;
-    margin-right: 1vh;
-    display: flex;
-    gap:4rem;
-    overflow-x: auto; /* Ajoutez cette propriété pour activer la barre de défilement horizontale */
-    white-space: nowrap; /* Évite que les éléments ne passent à la ligne */
-    border: 1px solid gray;
-    .icon_scroll{
-        width: 3vh;
-        height: 3vh;
-    }
-    justify-content: space-between;
-}
-
-.image-with-text{
-    font-size: small;
-    display: inline-block; /* Assurez-vous que les éléments restent en ligne */
-    vertical-align: top; /* Alignez les éléments en haut de la ligne */
-}
-
-
-.icon_scroll {
-    width: 3vh;
-    height: 3vh;
-    
-}
-/* Masquer la barre de défilement */
-.scrollbar::-webkit-scrollbar {
-    width: 0.5rem; /* Largeur de la barre de défilement (peut être ajustée) */
-    height: 0.5rem; /* Hauteur de la barre de défilement (peut être ajustée) */
-    display: none; /* Masquer la barre de défilement */
-}
-
-
-.horizontal-container{
-   display:flex;
-   align-items: center;
-}
-
-.arrow{
+.scrollbar {
+  overflow-x: auto;
+  white-space: nowrap;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+  transition: scroll 0.5s ease-in-out; 
+  border-radius: 10px;
+  height: 120%;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  margin-left: 1vh;
+  margin-right: 1vh;
+  display: flex;
+  gap: 4rem;
+  overflow-x: auto;
+  white-space: nowrap;
+  border: 1px solid rgba(128, 128, 128, 0.366);
+  .icon_scroll {
     width: 2vh;
     height: 2vh;
-    margin: 1vh;
+  }
+  justify-content: space-between;
+}
+
+.image-with-text {
+  font-size: small;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.icon_scroll {
+  width: 3vh;
+  height: 3vh;
+}
+
+.scrollbar::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+  display: none;
+}
+
+.horizontal-container {
+  display: flex;
+  align-items: center;
+}
+
+.arrow {
+  width: 2vh;
+  height: 1.2vh;
+  margin: 2vh;
+  padding: 5px;
+  border-radius: 50%;
+  border: 0.1px solid rgba(0, 0, 0, 0.371);
+  transition: box-shadow 0.3s ease; /* Transition pour une animation en douceur */
+
+  /* Styles par défaut pour l'ombre */
+  box-shadow: none;
+}
+
+.arrow:hover {
+  /* Styles lorsque l'élément est survolé */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); /* Ombre portée au survol */
+}
+
+
+.arrow-image {
+  width: 1vh;
+  height: 1vh;
+  transform: translateY(-5%);
 }
