--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -10,11 +10,11 @@ body {
 }
 
 
-.cardwrapper{
-  width: 300px; /* Largeur fixe pour chaque carte */
-  justify-content: center;
-  display: flex;
-}
+// .card-wrapper{
+//   width: 300px; /* Largeur fixe pour chaque carte */
+//   justify-content: center;
+//   display: flex;
+// }
 
 .load{
   display: flex; 
