Ajout du lien dans la carte, ajout de la seconde page, Ajout des styles pour la detailled page et backup du code avant les fonctions

--- a/src/app/components/detailledpage/detailledpage.component.html
+++ b/src/app/components/detailledpage/detailledpage.component.html
@@ -1,15 +1,11 @@
-<router-outlet></router-outlet>
-    
-<p>detailledpage works!</p>
-<div class="detailled-page">
-    <h2>Détails de l'hébergement</h2>
-    <div *ngIf="accommodation">
-      <h3>{{ accommodation.city.name }}</h3>
-      <p>Code postal : {{ accommodation.city.zipCode }}</p>
-      <!-- Autres détails de l'hébergement à afficher -->
-    </div>
-    <div *ngIf="!accommodation">
-      <p>Aucun hébergement trouvé.</p>
-    </div>
-  </div>
-  
+<app-header></app-header>
+<div
+*ngIf="accommodation$ | async as accommodations"
+class="cardlist-container"
+>
+<div class="cardlist">
+  <div *ngFor="let accommodation of accommodations" class="card-wrapper">
+      <app-detailled-card
+        [accommodation]="accommodation"
+      >
+      </app-detailled-card>
