Dépôt final et code entièrement commenté pour le prof
Dépôt final et code entièrement commenté pour le prof

--- a/src/app/components/bubble-maps/bubble-maps.component.html
+++ b/src/app/components/bubble-maps/bubble-maps.component.html
@@ -1,7 +1,9 @@
-
 <button class="bubble-maps-list" (click)="toggleDisplay()">
-    <div class="text">
-        <p>{{ isShowingMap ? 'Afficher la carte' : 'Afficher la liste' }}</p>
-    </div>
-    <img src="../../../assets/assets-airbnb/{{currentImage}}" class="filter-white"/>    
+  <div class="text">
+    <p>{{ isShowingMap ? "Afficher la carte" : "Afficher la liste" }}</p>
+  </div>
+  <img
+    src="../../../assets/assets-airbnb/{{ currentImage }}"
+    class="filter-white"
+  />
 </button>
