--- a/src/app/components/bubble-maps/bubble-maps.component.scss
+++ b/src/app/components/bubble-maps/bubble-maps.component.scss
@@ -1,37 +1,35 @@
-.filter-white{
-    filter: invert(100%);
+.filter-white {
+  filter: invert(100%);
 }
 
-.bubble-maps-list{
-    transition: all 0.3s;
-    border: none;
-    z-index: 4;
-    position:fixed;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 90%;
-    height: 4vh;
-    align-items: center;
-    gap:1rem;
-    display: flex;
-    justify-content: center;
-    width: 8vw;
-    border-radius: 30px;
-    background-color: black;
-    img{
-        width: 15px;
-        height: 15px;
-        font-family: 'cereal_airbnb_light';
-    }
-
+.bubble-maps-list {
+  transition: all 0.3s;
+  border: none;
+  z-index: 4;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 90%;
+  height: 4vh;
+  align-items: center;
+  gap: 1rem;
+  display: flex;
+  justify-content: center;
+  width: 8vw;
+  border-radius: 30px;
+  background-color: black;
+  img {
+    width: 15px;
+    height: 15px;
+    font-family: "cereal_airbnb_light";
+  }
 }
-.text{
-    
-    font-size: large;
-    color: white;
+.text {
+  font-size: large;
+  color: white;
 }
 
 .bubble-maps-list:hover {
-    transform: translateX(-50%) scale(1.1); /* Zoom de 10% */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Ombre de boîte */
+  transform: translateX(-50%) scale(1.1); /* Zoom de 10% */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Ombre de boîte */
 }
