--- a/src/app/components/scrollbar/scrollbar.component.html
+++ b/src/app/components/scrollbar/scrollbar.component.html
@@ -1,19 +1,28 @@
 <div class="horizontal-container">
   <!-- Left Arrow for Scrolling -->
   <div class="arrow left-arrow" (click)="scrollLeft()">
-    <img src="../../assets/assets_scrollbar/left.svg" alt="icon_scroll" class="arrow-image" />
+    <img
+      src="../../assets/assets_scrollbar/left.svg"
+      alt="icon_scroll"
+      class="arrow-image"
+    />
   </div>
   <div #scrollContainer class="scrollbar">
     <!-- Utilisez *ngFor pour générer les éléments en boucle -->
     <ng-container *ngFor="let image of imageList; let i = index">
       <div class="image-with-text">
         <img [src]="image.src" alt="icon_scroll" class="icon_scroll" />
-        <p>Texte {{ i + 1 }}</p> <!-- Numérote les textes à partir de 1 -->
+        <p>Texte {{ i + 1 }}</p>
+        <!-- Numérote les textes à partir de 1 -->
       </div>
     </ng-container>
   </div>
   <!-- R Arrow for Scrolling -->
   <div class="arrow right-arrow" (click)="scrollRight()">
-    <img src="../../assets/assets_scrollbar/right.svg" alt="icon_scroll" class="arrow-image" />
+    <img
+      src="../../assets/assets_scrollbar/right.svg"
+      alt="icon_scroll"
+      class="arrow-image"
+    />
   </div>
 </div>
